force-app/main/default/objects/Debtor_Ledger_Line_Item__c/Debtor_Ledger_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Debtor Ledger</label>
    <nameField>
        <displayFormat>DL-{00000000}</displayFormat>
        <label>Debtor Ledger No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debtors Ledgers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>