force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <label>Doc. Amount (CR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>