force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Credit_Debit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Debit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit/Debit Note</label>
    <referenceTo>Credit_Note__c</referenceTo>
    <relationshipName>Debtors_Ledger_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>