force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/D__c.field-meta.xml
<CustomField>
    <fullName>D__c</fullName>
    <label>DB/CR</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Document_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DB</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>