force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Debit_Amount__c</fullName>
    <label>Doc. Amount (DB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>