force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Debtor_Summary_No__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Summary_No__c</fullName>
    <label>Debtor Summary No.</label>
    <referenceTo>Debtor_Ledger__c</referenceTo>
    <relationshipName>Debtors_Ledger</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>