force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Document_Amount__c.field-meta.xml
<CustomField>
    <fullName>Document_Amount__c</fullName>
    <label>Document Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>