force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Document_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Document Date</label>
    <type>Date</type>
</CustomField>