force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Document_No__c.field-meta.xml
<CustomField>
    <fullName>Document_No__c</fullName>
    <label>Document No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>