force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Payment_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Payment_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Receipt</label>
    <referenceTo>Payment_Receipt__c</referenceTo>
    <relationshipName>Debtors_Ledger</relationshipName>
    <type>Lookup</type>
</CustomField>