force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Payment_Receipt_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Payment_Receipt_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Receipt Line Item</label>
    <referenceTo>Payment_Receipt_Line_Item__c</referenceTo>
    <relationshipName>Debtors_Ledger_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>