force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Pending_For_Alloc__c.field-meta.xml
<CustomField>
    <fullName>Pending_For_Alloc__c</fullName>
    <label>Pending For Alloc.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>