force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Refund_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Refund_Voucher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund Voucher</label>
    <referenceTo>Refund__c</referenceTo>
    <relationshipName>Debtors_Ledger</relationshipName>
    <type>Lookup</type>
</CustomField>