force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>Sales_Agreement__c</referenceTo>
    <relationshipName>Debtors_Ledger</relationshipName>
    <type>Lookup</type>
</CustomField>