force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Sales_Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice Line Item</label>
    <referenceTo>Sales_Invoice_Line_Item__c</referenceTo>
    <relationshipName>Debtors_Ledger_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>