force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unallocated</fullName>
                <default>true</default>
                <label>Unallocated</label>
            </value>
            <value>
                <fullName>Partially Allocated</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>