force-app/main/default/objects/Debtor_Ledger_Line_Item__c/fields/Voided_Payment_Receipt_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Voided_Payment_Receipt_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voided Payment Receipt Line Item</label>
    <referenceTo>Voided_Payment_Receipt_Line_Item__c</referenceTo>
    <relationshipName>Debtors_Ledger</relationshipName>
    <type>Lookup</type>
</CustomField>