force-app/main/default/objects/Debtor_Ledger_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Amount__c</columns>
    <columns>Credit_Amount__c</columns>
    <columns>Debit_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>